--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="link">
-  <%= form_with(model: task, local: true, url:tasks_path) do |form| %>
+  <%= form_with(model: task, local: true, url:confirm_new_or_edit) do |form| %>
   <% if task.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(task.errors.count, "error") %> prohibited this task from being saved:</h2>
@@ -22,7 +22,7 @@
       </tr>
     </table>
     <div class="field">
-  
+
     </div>
     <div class="actions">
       <%= form.submit "投稿する" %>
