[add]:国際化(辞書機能)導入

--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', task: @task %>
 
-<%= link_to 'show', @task %>
-<%= link_to 'Back', tasks_path %>
+<%= link_to t('helpers.select.show'), @task %>
+<%= link_to t('helpers.select.back'), tasks_path %>
