--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -6,4 +6,4 @@
 <p>期限：<%= @task.time_limit %></p>
 <p>優先度：<%= @task.priority %></p>
 <p>状態：<%= @task.status %></p>
-<%= link_to 'back', tasks_path %>
+<%= link_to t('helpers.select.back'), tasks_path %>
