--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -2,7 +2,7 @@
   <%= form_with(model: task, local: true, url:confirm_new_or_edit) do |form| %>
   <% if task.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(task.errors.count, "error") %> prohibited this task from being saved:</h2>
+      <h2><%= @task.errors.count %><%= 'activerecord.errors.messages.count_of_errors' %></h2>
       <ul>
         <% task.errors.full_messages.each do |message| %>
           <li><%= message %></li>
