--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,6 +5,7 @@
     <tr>
       <th><%= t('activerecord.attributes.task.title') %></th>
       <th><%= t('activerecord.attributes.task.content') %></th>
+      <th><%= t('activerecord.attributes.task.created_at') %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,6 +14,7 @@
     <tr>
       <td><%= task.title %></td>
       <td><%= task.content %></td>
+      <td><%= task.created_at %></td>
       <td><%= link_to t('helpers.select.show'), task_path(task.id) %></td>
       <td><%= link_to t('helpers.select.edit'), edit_task_path(task), date: {confirm: t('edit?')} %></td>
       <td><%= link_to t('helpers.select.destroy'), task, method: :delete, data: {confirm: t('delete?')} %></td>
