--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -14,7 +14,7 @@
     <tr>
       <td><%= task.title %></td>
       <td><%= task.content %></td>
-      <td><%= task.created_at %></td>
+      <td><%= l task.created_at, format: :short %></td>
       <td><%= link_to t('helpers.select.show'), task_path(task.id) %></td>
       <td><%= link_to t('helpers.select.edit'), edit_task_path(task), date: {confirm: t('edit?')} %></td>
       <td><%= link_to t('helpers.select.destroy'), task, method: :delete, data: {confirm: t('delete?')} %></td>
