[add]:systemspecテスト1件の追記

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,6 @@
 <h1><%= t('view_title.models.task.index') %></h1>
 <p id="notice"><%= notice %></p>
-<table>
+<table class = "task_row">
   <thead>
     <tr>
       <th><%= t('activerecord.attributes.task.title') %></th>
@@ -14,7 +14,7 @@
     <tr>
       <td><%= task.title %></td>
       <td><%= task.content %></td>
-      <td><%= l task.created_at, format: :short %></td>
+      <td><%= l task.created_at, format: :default %></td>
       <td><%= link_to t('helpers.select.show'), task_path(task.id) %></td>
       <td><%= link_to t('helpers.select.edit'), edit_task_path(task), date: {confirm: t('edit?')} %></td>
       <td><%= link_to t('helpers.select.destroy'), task, method: :delete, data: {confirm: t('delete?')} %></td>
