[change]:各Viewページをi18nを使って表示されるように変更

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -13,11 +13,11 @@
   <table>
       <br>
       <tr>
-        <th class="title"><%= form.label :"タイトル" %></th>
+        <th class="title"><%= form.label :title %></th>
         <td class="title"><%= form.text_field :title %></td>
       </tr>
       <tr>
-        <th class="content"><%= form.label :"内容" %></th>
+        <th class="content"><%= form.label :content %></th>
         <td class="content"><%= form.text_field :content %></td>
       </tr>
     </table>
