--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -20,6 +20,10 @@
         <th class="content"><%= form.label :content %></th>
         <td class="content"><%= form.text_field :content %></td>
       </tr>
+      <tr>
+        <th class="content"><%= form.label :time_limit %></th>
+        <td class="content"><%= form.datetime_select :time_limit %></td>
+      </tr>
     </table>
     <div class="field">
 
