--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,6 +5,7 @@
     <tr>
       <th><%= t('activerecord.attributes.task.title') %></th>
       <th><%= t('activerecord.attributes.task.content') %></th>
+      <th><%= t('activerecord.attributes.task.time_limit') %></th>
       <th><%= t('activerecord.attributes.task.created_at') %></th>
       <th colspan="3"></th>
     </tr>
@@ -12,8 +13,9 @@
   <tbody>
     <% @tasks.each do |task| %>
     <tr>
-      <td><%= task.title %></td>
-      <td><%= task.content %></td>
+      <td><%= task.title %>*</td>
+      <td><%= task.content %>*</td>
+      <td><%= l task.time_limit, format: :short %>*</td>
       <td><%= l task.created_at, format: :default %></td>
       <td><%= link_to t('helpers.select.show'), task_path(task.id) %></td>
       <td><%= link_to t('helpers.select.edit'), edit_task_path(task), date: {confirm: t('edit?')} %></td>
