--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,8 +1,10 @@
 <h1><%= t('view_title.models.task.index') %></h1>
 <p id="notice"><%= notice %></p>
+<%= link_to t('view.models.task.sort_by_timelimit'), tasks_path(sort_expired: "true") %>
 <table class = "task_row">
   <thead>
     <tr>
+      <th><%= t('activerecord.attributes.task.id') %></th>
       <th><%= t('activerecord.attributes.task.title') %></th>
       <th><%= t('activerecord.attributes.task.content') %></th>
       <th><%= t('activerecord.attributes.task.time_limit') %></th>
@@ -13,6 +15,7 @@
   <tbody>
     <% @tasks.each do |task| %>
     <tr>
+      <td><%= task.id %>*</td>
       <td><%= task.title %>*</td>
       <td><%= task.content %>*</td>
       <td><%= l task.time_limit, format: :short %>*</td>
