--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -18,7 +18,7 @@
       <td><%= task.id %>*</td>
       <td><%= task.title %>*</td>
       <td><%= task.content %>*</td>
-      <td><%= l task.time_limit, format: :short %>*</td>
+      <td class = "task_row_timelimit"><%= l task.time_limit, format: :short %>*</td>
       <td><%= l task.created_at, format: :default %></td>
       <td><%= link_to t('helpers.select.show'), task_path(task.id) %></td>
       <td><%= link_to t('helpers.select.edit'), edit_task_path(task), date: {confirm: t('edit?')} %></td>
