--- a/app/views/tasks/confirm.html.erb
+++ b/app/views/tasks/confirm.html.erb
@@ -6,6 +6,8 @@
   <p><%= t('activerecord.attributes.task.content') %>：<%= @task.content %></p>
   <%= form.hidden_field :time_limit %>
   <p><%= t('activerecord.attributes.task.time_limit') %>：<%= @task.time_limit %></p>
+  <%= form.hidden_field :status %>
+  <p><%= t('activerecord.attributes.task.status') %>：<%= @task.status %></p>
   <%= form.submit t('helpers.submit.submit') %>
   <%= form.submit t('helpers.select.back'), name: "back" %>
 <% end %>
