--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -18,6 +18,7 @@
       <th><%= t('activerecord.attributes.task.content') %></th>
       <th><%= t('activerecord.attributes.task.time_limit') %></th>
       <th><%= t('activerecord.attributes.task.status') %></th>
+      <th><%= t('activerecord.attributes.task.priority') %></th>
       <th><%= t('activerecord.attributes.task.created_at') %></th>
       <th colspan="3"></th>
     </tr>
@@ -30,6 +31,7 @@
       <td><%= task.content %>*</td>
       <td class = "task_row_timelimit"><%= l task.time_limit, format: :short %>*</td>
       <td class = "task_status"><%= task.status %>*</td>
+      <td><%= task.priority %>*</td>
       <td><%= l task.created_at, format: :default %></td>
       <td><%= link_to t('helpers.select.show'), task_path(task.id) %></td>
       <td><%= link_to t('helpers.select.edit'), edit_task_path(task), date: {confirm: t('edit?')} %></td>
