--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -7,8 +7,10 @@
 <%= f.select :status,[[t('serch.waiting')],
                      [t('serch.working')],
                      [t('serch.completed')]], include_blank: true %>
+
 <%= f.submit t('serch.do_a_serch') %>
 <%= link_to t('serch.sort_by_timelimit'), tasks_path(sort_expired: "true") %>
+<%= link_to t('serch.sort_by_priority'), tasks_path(sort_priority: "true") %>
 <% end %>
 <table class = "task_row">
   <thead>
