--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -33,7 +33,7 @@
       <td><%= task.content %>*</td>
       <td class = "task_row_timelimit"><%= l task.time_limit, format: :short %>*</td>
       <td class = "task_status"><%= task.status %>*</td>
-      <td><%= task.priority %>*</td>
+      <td class = "task_row_priority"><%= task.priority %>*</td>
       <td><%= l task.created_at, format: :default %></td>
       <td><%= link_to t('helpers.select.show'), task_path(task.id) %></td>
       <td><%= link_to t('helpers.select.edit'), edit_task_path(task), date: {confirm: t('edit?')} %></td>
