--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,8 +24,8 @@
     </div>
     <div id="gnavi" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href=""><%= t('view_title.models.task.index') %></a></li>
-        <li><a href=""><%= t('view_title.models.task.new') %></a></li>
+        <li><a href="/"><%= t('view_title.models.task.index') %></a></li>
+        <li><a href="/tasks/new"><%= t('view_title.models.task.new') %></a></li>
         <li><a href="">menu2</a></li>
       </ul>
     </div>
