--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="link">
+<div class="link center">
   <%= form_with(model: task, local: true, url:confirm_new_or_edit) do |form| %>
   <% if task.errors.any? %>
     <div id="error_explanation">
@@ -10,7 +10,7 @@
       </ul>
     </div>
   <% end %>
-  <table>
+  <table class = "center">
       <br>
       <tr>
         <th class="title"><%= form.label :title %></th>
