--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,6 +1,8 @@
-<h1><%= t('view_title.models.task.edit') %></h1>
+<h1 class = "center"><%= t('view_title.models.task.edit') %></h1>
 
 <%= render 'form', task: @task %>
 
-<%= link_to t('helpers.select.show'), @task %>
-<%= link_to t('helpers.select.back'), tasks_path %>
+<div class="center">
+  <%= link_to t('helpers.select.show'), @task %>
+  <%= link_to t('helpers.select.back'), tasks_path %>
+</div>
