--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -27,6 +27,7 @@
       <th><%= link_to t('activerecord.attributes.task.time_limit'),tasks_path(sort_expired: "true")  %></th>
       <th><%= t('activerecord.attributes.task.status') %></th>
       <th><%= t('activerecord.attributes.task.created_at') %></th>
+      <th>ユーザー名</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -40,6 +41,7 @@
       <td class = "task_row_timelimit"><%= l task.time_limit, format: :short %>*</td>
       <td class = "task_status"><%= task.status %>*</td>
       <td><%= l task.created_at, format: :short %></td>
+      <td><%= task.user.name %></td>
       <td><button type="button" class="btn btn-default btn-block margin-left"><%= link_to t('helpers.select.show'), task_path(task.id) %></button></td>
       <td><button type="button" class="btn btn-default btn-block margin-left"><%= link_to t('helpers.select.edit'), edit_task_path(task), date: {confirm: t('edit?')} %></button></td>
       <td><button type="button" class="btn btn-default btn-block margin-left"><%= link_to t('helpers.select.destroy'), task, method: :delete, data: {confirm: t('delete?')} %></button></td>
