--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -4,13 +4,15 @@
 <tr>
   <th>ユーザーID</th>
   <th>ユーザー名</th>
-  <th colspan="1"></th>
+  <th>タスク数</th>
+  <th colspan="3"></th>
 </tr>
 </thead>
 <tbody>
 <% @users.each do |user| %>
   <td><%= user.id %></td>
   <td><%= user.name %></td>
+  <td><%= user.tasks.count %></td>
   <td><button type="button" class="btn btn-default btn-block margin-left"><%= link_to t('helpers.select.show'), admin_user_path(user.id) %></button></td>
     <td><button type="button" class="btn btn-default btn-block margin-left"><%= link_to t('helpers.select.edit'), edit_admin_user_path(user.id), date: {confirm: t('edit?')} %></button></td>
   <td><button type="button" class="btn btn-default btn-block margin-left"><%= link_to t('helpers.select.destroy'), admin_user_path(user.id), method: :delete, data: {confirm: t('delete?')} %></button></td>
