--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -12,7 +12,7 @@
 <% @users.each do |user| %>
   <td><%= user.id %></td>
   <td><%= user.name %></td>
-  <td><%= @tasks.where(user_id: user.id).count %></td>
+  <td><%= user.tasks.length %></td>
   <td><button type="button" class="btn btn-default btn-block margin-left"><%= link_to t('helpers.select.show'), admin_user_path(user.id) %></button></td>
     <td><button type="button" class="btn btn-default btn-block margin-left"><%= link_to t('helpers.select.edit'), edit_admin_user_path(user.id), date: {confirm: t('edit?')} %></button></td>
   <td><button type="button" class="btn btn-default btn-block margin-left"><%= link_to t('helpers.select.destroy'), admin_user_path(user.id), method: :delete, data: {confirm: t('delete?')} %></button></td>
