--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,3 +1,5 @@
-<h1>Sign up</h1>
+<h1 class = "center">Register</h1>
 
 <%= render 'form', user: @user %>
+
+<%= link_to 'ユーザー一覧', admin_users_path %>
