--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_with(model: @user, local: true) do |f| %>
-
+<%= form_with(model: @user, local: true ,url: choose_new_or_edit) do |f| %>
+<div class="center">
   <%= f.label :name %>
   <%= f.text_field :name %>
 
@@ -11,6 +11,8 @@
 
   <%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation %>
+  <br>
 
-  <%= f.submit "Create my account" %>
+    <%= f.submit "Create account" %>
+  </div>
 <% end %>
