--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -9,7 +9,7 @@
 </tr>
 </thead>
 <tbody>
-<% @users.each do |user| %>
+<% @users.order(id: 'ASC').each do |user| %>
   <td><%= user.id %></td>
   <td><%= user.name %></td>
   <td><%= user.tasks.length %></td>
@@ -19,3 +19,6 @@
 </tbody>
 <% end %>
 </table>
+<div class="link">
+  <%= link_to 'Create account', new_admin_user_path %>
+</div>
