--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', user: @user %>
 
-<%= link_to 'ユーザー一覧', admin_users_path %>
+<%= link_to t('view_title.models.admin_user.index'), admin_users_path %>
