--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -37,7 +37,7 @@
 
     </div>
     <div class="actions">
-      <%= form.submit "投稿する" %>
+      <%= form.submit t('helpers.submit.submit') %>
     </div>
   <% end %>
 </div>
