--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -1,18 +1,18 @@
 <%= form_with(model: @user, local: true ,url: choose_new_or_edit) do |f| %>
-<div class="center">
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+  <div class="center">
+    <%= f.label :name %>
+    <%= f.text_field :name %>
 
-  <%= f.label :email %>
-  <%= f.email_field :email %>
+    <%= f.label :email %>
+    <%= f.email_field :email %>
 
-  <%= f.label :password %>
-  <%= f.password_field :password %>
+    <%= f.label :password %>
+    <%= f.password_field :password %>
 
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %>
-  <br>
+    <%= f.label :password_confirmation %>
+    <%= f.password_field :password_confirmation %>
+    <br>
 
-    <%= f.submit "Create account" %>
+    <%= f.submit t('helpers.submit.create_account') %>
   </div>
 <% end %>
