--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,24 +1,26 @@
-<h1>ユーザー管理一覧画面</h1>
-<table>
-<thead>
-<tr>
-  <th>ユーザーID</th>
-  <th>ユーザー名</th>
-  <th>タスク数</th>
-  <th colspan="3"></th>
-</tr>
-</thead>
-<tbody>
-<% @users.order(id: 'ASC').each do |user| %>
-  <td><%= user.id %></td>
-  <td><%= user.name %></td>
-  <td><%= user.tasks.length %></td>
-  <td><button type="button" class="btn btn-default btn-block margin-left"><%= link_to t('helpers.select.show'), admin_user_path(user.id) %></button></td>
-    <td><button type="button" class="btn btn-default btn-block margin-left"><%= link_to t('helpers.select.edit'), edit_admin_user_path(user.id), date: {confirm: t('edit?')} %></button></td>
-  <td><button type="button" class="btn btn-default btn-block margin-left"><%= link_to t('helpers.select.destroy'), admin_user_path(user.id), method: :delete, data: {confirm: t('delete?')} %></button></td>
-</tbody>
-<% end %>
+<h1 class = "center"><%= t('view_title.models.admin_user.index') %></h1>
+<table class ="center">
+  <thead>
+    <tr>
+      <th><%= t('activerecord.attributes.user.id') %>/</th>
+      <th><%= t('activerecord.attributes.user.name') %>/</th>
+      <th><%= t('view.models.admin_user.have_task_counts') %></th>
+      <th colspan="3"></th>
+   </tr>
+  </thead>
+  <tbody>
+  <% @users.order(id: 'ASC').each do |user| %>
+    <tr>
+      <td><%= user.id %></td>
+      <td><%= user.name %></td>
+      <td><%= user.tasks.length %></td>
+      <td><button type="button" class="btn btn-default btn-block margin-left"><%= link_to t('helpers.select.show'), admin_user_path(user.id) %></button></td>
+      <td><button type="button" class="btn btn-default btn-block margin-left"><%= link_to t('helpers.select.edit'), edit_admin_user_path(user.id), date: {confirm: t('edit?')} %></button></td>
+      <td><button type="button" class="btn btn-default btn-block margin-left"><%= link_to t('helpers.select.destroy'), admin_user_path(user.id), method: :delete, data: {confirm: t('delete?')} %></button></td>
+    </tr>
+  </tbody>
+  <% end %>
 </table>
-<div class="link">
-  <%= link_to 'Create account', new_admin_user_path %>
+<div class="link center">
+  <%= link_to t('helpers.submit.create_account'), new_admin_user_path %>
 </div>
