--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,13 +1,11 @@
-<h1><%= @user.name %>のページ</h1>
-
-<p>メールアドレス: <%= @user.email %></p>
-
-
+<h1 class = "center"><%= @user.name %><%= t('view.models.all.page') %></h1>
+<div class="space">
+</div>
+<p class = "center">email: <%= @user.email %></p>
 <table class = "task_row center">
   <thead>
     <tr>
       <th><%= t('activerecord.attributes.task.priority') %></th>
-      <!-- <th><%= t('activerecord.attributes.task.id') %></th> -->
       <th><%= t('activerecord.attributes.task.title') %></th>
       <th><%= t('activerecord.attributes.task.content') %></th>
       <th><%= t('activerecord.attributes.task.time_limit')  %></th>
@@ -20,17 +18,16 @@
     <% @tasks.each do |task| %>
     <tr class = "task_container">
       <td class = "task_row_priority"><%= task.priority %>*</td>
-      <!-- <td><%= task.id %>*</td> -->
       <td><%= task.title %>*</td>
       <td><%= task.content %>*</td>
       <td class = "task_row_timelimit"><%= l task.time_limit, format: :short %>*</td>
       <td class = "task_status"><%= task.status %>*</td>
       <td><%= l task.created_at, format: :short %></td>
-
       <td><button type="button" class="btn btn-default btn-block margin-left"><%= link_to t('helpers.select.show'), task_path(task.id) %></button></td>
     </tr>
     <% end %>
   </tbody>
 </table>
-
-<%= link_to 'ユーザー一覧', admin_users_path %>
+<div class="center">
+  <%= link_to t('view_title.models.admin_user.index'), admin_users_path %>
+</div>
