--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -27,7 +27,7 @@
       <th><%= link_to t('activerecord.attributes.task.time_limit'),tasks_path(sort_expired: "true")  %></th>
       <th><%= t('activerecord.attributes.task.status') %></th>
       <th><%= t('activerecord.attributes.task.created_at') %></th>
-      <th>ユーザー名</th>
+      <th><%= t('activerecord.attributes.user.name') %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
