--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,5 @@
-<h1>Sign up</h1>
-
-<%= form_with(model: @user, local: true) do |f| %>  
+<h1 class = "center">Sign up</h1>
+<%= form_with(model: @user, local: true) do |f| %>
 
   <%= f.label :name %>
   <%= f.text_field :name %>
@@ -14,5 +13,5 @@
   <%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation %>
 
-  <%= f.submit "Create my account" %>
+  <%= f.submit t('helpers.submit.create_account') %>
 <% end %>
