--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,5 +1,5 @@
 <h1 class = "center"><%= t('view_title.models.task.index') %></h1>
-<p class = "center" id="notice"><%= notice %></p>
+<!-- <p class = "center" id="notice"><%= notice %></p> -->
 <div class = "center">
 
 
