--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -14,9 +14,9 @@
       <td><%= user.id %></td>
       <td><%= user.name %></td>
       <td><%= user.tasks.length %></td>
-      <td><button type="button" class="btn btn-default btn-block margin-left"><%= link_to t('helpers.select.show'), admin_user_path(user.id) %></button></td>
-      <td><button type="button" class="btn btn-default btn-block margin-left"><%= link_to t('helpers.select.edit'), edit_admin_user_path(user.id), date: {confirm: t('edit?')} %></button></td>
-      <td><button type="button" class="btn btn-default btn-block margin-left"><%= link_to t('helpers.select.destroy'), admin_user_path(user.id), method: :delete, data: {confirm: t('delete?')} %></button></td>
+      <td class = "show"><button type="button" class="btn btn-default btn-block margin-left"><%= link_to t('helpers.select.show'), admin_user_path(user.id), {class: "show"} %></button></td>
+      <td class = "edit"><button type="button" class="btn btn-default btn-block margin-left"><%= link_to t('helpers.select.edit'), edit_admin_user_path(user.id), date: {confirm: t('edit?')}, class: "edit" %></button></td>
+      <td class = "destroy"><button type="button" class="btn btn-default btn-block margin-left"><%= link_to t('helpers.select.destroy'), admin_user_path(user.id), method: :delete,class: "destroy" %></button></td>
     </tr>
   </tbody>
   <% end %>
