[add]:labelのCRUD機能,labellingモデル作成

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -23,4 +23,6 @@
 </table>
 <div class="link center">
   <%= link_to t('helpers.submit.create_account'), new_admin_user_path %>
+  <%= link_to t('view_title.models.label.index'), labels_path %>
+  <%= link_to t('view_title.models.label.new'), new_label_path %>
 </div>
