--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -10,7 +10,6 @@
 <%= f.select :status,[[t('serch.waiting')],
                      [t('serch.working')],
                      [t('serch.completed')]], include_blank: true %>
-
 <%= f.submit t('serch.do_a_serch') %>
 </div>
 <br>
@@ -29,6 +28,7 @@
       <th><%= t('activerecord.attributes.task.created_at') %></th>
       <th><%= t('activerecord.attributes.user.name') %></th>
       <th colspan="3"></th>
+      <th><%= t('activerecord.attributes.label.name') %></th>
     </tr>
   </thead>
   <tbody>
@@ -45,11 +45,16 @@
       <td><button type="button" class="btn btn-default btn-block margin-left"><%= link_to t('helpers.select.show'), task_path(task.id) %></button></td>
       <td><button type="button" class="btn btn-default btn-block margin-left"><%= link_to t('helpers.select.edit'), edit_task_path(task), date: {confirm: t('edit?')} %></button></td>
       <td><button type="button" class="btn btn-default btn-block margin-left"><%= link_to t('helpers.select.destroy'), task, method: :delete, data: {confirm: t('delete?')} %></button></td>
+      <td>
+        <% task.labels.each do |label| %>
+          [<%= label.name %>]
+        <% end %>
+      </td>
     </tr>
     <% end %>
   </tbody>
 </table>
-<%= paginate @tasks %>
+<%= paginate @tasks if @tasks.present? %>
 
   <div class="link center">
     <%= link_to t('view.models.task.new'), new_task_path %>
