--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,12 +1,16 @@
 <h1 class = "center"><%= t('view_title.models.task.show') %></h1>
 
-<p class = " center"><%= t('activerecord.attributes.task.title') %>：<%= @task.title %></p>
-<p class = " center"><%= t('activerecord.attributes.task.content') %>：<%= @task.content %></p>
-<p class = " center"><%= t('activerecord.attributes.task.created_at') %>；<%= @task.created_at %></p>
-<p class = " center"><%= t('activerecord.attributes.task.time_limit') %>：<%= @task.time_limit %></p>
-<p class = " center"><%= t('activerecord.attributes.task.priority') %>：<%= @task.priority %></p>
-<p class = " center"><%= t('activerecord.attributes.task.status') %>：<%= @task.status %></p>
-
+<p class = "center"><%= t('activerecord.attributes.task.title') %>：<%= @task.title %></p>
+<p class = "center"><%= t('activerecord.attributes.task.content') %>：<%= @task.content %></p>
+<p class = "center"><%= t('activerecord.attributes.task.created_at') %>；<%= @task.created_at %></p>
+<p class = "center"><%= t('activerecord.attributes.task.time_limit') %>：<%= @task.time_limit %></p>
+<p class = "center"><%= t('activerecord.attributes.task.priority') %>：<%= @task.priority %></p>
+<p class = "center"><%= t('activerecord.attributes.task.status') %>：<%= @task.status %></p>
+<p class = "center"><%= t('activerecord.attributes.label.name') %>:
+  <% @task.labels.each do |label| %>
+  [<%= label.name %>]
+  <% end %>
+</p>
 <div class="center">
   <%= link_to t('helpers.select.back'), tasks_path %>
 </div>
