--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,2 @@
-<h1><%= @user.name %><%= t('view.models.all.page') %></h1>
-<p>email: <%= @user.email %></p>
+<h1 class="center"><%= @user.name %><%= t('view.models.all.page') %></h1>
+<p class="center">email: <%= @user.email %></p>
