--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -4,7 +4,7 @@
     <tr>
       <th><%= t('activerecord.attributes.user.id') %>/</th>
       <th><%= t('activerecord.attributes.user.name') %>/</th>
-      <th><%= t('view.models.admin_user.have_task_counts') %></th>
+      <th><%= t('view_title.models.admin_user.have_task_counts') %></th>
       <th colspan="3"></th>
    </tr>
   </thead>
