--- a/app/views/labels/edit.html.erb
+++ b/app/views/labels/edit.html.erb
@@ -1,6 +1,8 @@
-<h1><%= t('view_title.models.label.edit') %></h1>
+<h1 class ="center"><%= t('view_title.models.label.edit') %></h1>
 
 <%= render 'form', label: @label %>
 
-<%= link_to t('helpers.select.back'), labels_path %> |
-<%= link_to t('view_title.models.admin_user.index'), admin_users_path %>
+<div class="link center">
+  <%= link_to t('helpers.select.back'), labels_path %> |
+  <%= link_to t('view_title.models.admin_user.index'), admin_users_path %>
+</div>
