--- a/app/views/labels/index.html.erb
+++ b/app/views/labels/index.html.erb
@@ -1,6 +1,6 @@
-<h1><%= t('view_title.models.label.index') %></h1>
-
-<table>
+<h1 class="center"><%= t('view_title.models.label.index') %></h1>
+<div class="link center">
+<table class = "center">
   <thead>
     <tr>
       <th><%= t('activerecord.attributes.label.name') %></th>
@@ -25,3 +25,4 @@
 <%= link_to t('view_title.models.label.new'), new_label_path %>
 <br>
 <%= link_to t('view_title.models.admin_user.index'), admin_users_path %>
+</div>
