--- a/app/views/labels/show.html.erb
+++ b/app/views/labels/show.html.erb
@@ -1,9 +1,11 @@
-<p id="notice"><%= notice %></p>
+<div class="link center">
+  <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @label.name %>
-</p>
+  <p>
+    <strong>Name:</strong>
+    <%= @label.name %>
+  </p>
 
-<%= link_to 'Edit', edit_label_path(@label) %> |
-<%= link_to t('helpers.select.back'), labels_path %>
+  <%= link_to t('helpers.select.edit'), edit_label_path(@label) %> |
+  <%= link_to t('helpers.select.back'), labels_path %>
+</div>
